[package]
name = "libx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.144"
hashbrown = "0.14.3"
icrate = { git = "https://github.com/madsmtm/objc2.git", branch = "master", features = ["Foundation", "Foundation_NSLocale"] }
